--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+body {
+    height: 100vh;
+    background-color: #F6F7F8;
+}
+
 .loginLogo {
+    height: 100vh;
     display: flex;
     overflow: hidden;
-    padding: 345px 0px 344.928px 0px;
+    padding: 265px 0px 265px 0px;
     background: #F6F7F8;
     justify-content: center;
     align-items: center;
@@ -32,9 +38,7 @@
     display: inline-flex;
     overflow: hidden;
     padding: 48px 115px;
-    border-radius: 30px;
-    box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
-    background: var(--white, #e61010);
+
     flex-direction: column;
     align-items: center;
     gap: 32px;
@@ -46,6 +50,7 @@
     flex-direction: column;
     align-items: center;
     gap: 16px;
+    margin-bottom: 16px;
 }
 
 .frame-159-text {
@@ -57,16 +62,16 @@
     font-weight: 700;
     line-height: 120%;
     text-align: center;
+
 }
 
 .frame-250 {
-    width: Fill (422px);
-    height: Hug (196px);
-    gap: 20px;
+    width: 422px;
+    height: 196px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    margin-bottom: 20px;
     align-self: stretch;
 }
 
@@ -76,6 +81,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 32px;
+    margin-bottom: 16px;
 }
 
 .frame-14 {
@@ -122,6 +128,35 @@
     color: #000;
     font-family: Inter;
     font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+}
+
+.frame-176 {
+    width: 322px;
+    height: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 35px;
+}
+
+.frame-156 {
+    position: absolute;
+    display: inline-flex;
+    align-items: center;
+    gap: 35px;
+    height: 49px;
+    top: 67px;
+    right: 122px;
+    gap: 35px
+}
+
+.frame-156-text {
+    color: #000;
+    font-family: Inter;
+    font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: 120%;
