Generate Links to Sites

--- a/assed/template/sidebar.html
+++ b/assed/template/sidebar.html
@@ -19,20 +19,24 @@
   <!--Icons for Sidebar-->
   <div class="prop-1-default">
 
-    <div>
+    <div class="sideMenu" id="summary" onclick="loadNextSite('summary')">
         <embed src="/join/assed/svg/summary.svg">
+          <h3>Summary</h3>
     </div>
 
-    <div>
+    <div class="sideMenu" id="addtask" onclick="loadNextSite('addtask')">
         <embed src="/join/assed/svg/add_task.svg">
+          <h3>Add Task</h3>
     </div>
 
-    <div>
+    <div class="sideMenu" id="addtask" onclick="loadNextSite('board')">
         <embed src="/join/assed/svg/board.svg">
+          <h3>Board</h3>
     </div>
 
-    <div>
+    <div class="sideMenu" id="addtask" onclick="loadNextSite('contact')">
       <embed src="/join/assed/svg/contact.svg">
+        <h3>Contact</h3>
     </div>
 
 
