--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ text {
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
     background: #2A3647;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 30vh;
     align-items: center;
     flex-shrink: 0;
 }
