change the embed code to img, now ok

--- a/assed/template/sidebar.html
+++ b/assed/template/sidebar.html
@@ -1,28 +1,28 @@
 <div class="sidebar">
   <div class="cap2">
-    <embed src="/join/assed/svg/join_logo.svg">
+    <img src="/assed/svg/join_logo.svg" alt="">
   </div>
 
   <!--Icons for Sidebar-->
   <div class="prop-1-default">
 
     <div class="sideMenu" id="summary" onclick="loadNextSite('summary')">
-      <embed src="/join/assed/svg/summary.svg">
+      <img src="/assed/svg/summary.svg" alt="">
       <h3>Summary</h3>
     </div>
 
     <div class="sideMenu" id="addtask" onclick="loadNextSite('addtask')">
-      <embed src="/join/assed/svg/add_task.svg">
+      <img src="/assed/svg/add_task.svg" alt="">
       <h3>Add Task</h3>
     </div>
 
     <div class="sideMenu" id="addtask" onclick="loadNextSite('board')">
-      <embed src="/join/assed/svg/board.svg">
+      <img src="/assed/svg/board.svg" alt="">
       <h3>Board</h3>
     </div>
 
     <div class="sideMenu" id="addtask" onclick="loadNextSite('contact')">
-      <embed src="/join/assed/svg/contact.svg">
+      <img src="/assed/svg/contact.svg" alt="">
       <h3>Contact</h3>
     </div>
 
