--- a/assed/template/task_form.html
+++ b/assed/template/task_form.html
@@ -1,18 +1,38 @@
-<div class="task">
-  <form onsubmit="addTask()">
-    <input required id="taskTitle" />
-    <textarea type="text" id="taskDescription" placeholder="Enter a Description"></textarea>
-    <input required type="date" name="" id="tastDueDate" placeholder="dd/mm/yyyy" />
-    <select required name="" id="taskContact" multiple>
-      <option value="Georg">Georg</option>
-      <option value="Alex">Alex</option>
-      <option value="Jean">Jean</option>
-    </select>
-    <select required name="" id="taskCategory">
-      <option value="To Do">To Do</option>
-      <option value="In progrss">In progrss</option>
-      <option value="Await feedback">Await feedback</option>
-    </select>
-    <button>Add Task</button>
-  </form>
+<div style="padding-left: 244px;">
+  <div class="task">
+    <form onsubmit="addTask()">
+      <input required id="taskTitle" />
+      <textarea type="text" id="taskDescription" placeholder="Enter a Description"></textarea>
+      <input required type="date" name="" id="tastDueDate" placeholder="dd/mm/yyyy" />
+      <select required name="" id="taskContact" multiple>
+        <option value="Georg">Georg</option>
+        <option value="Alex">Alex</option>
+        <option value="Jean">Jean</option>
+      </select>
+      <select required name="" id="taskCategory">
+        <option value="To Do">To Do</option>
+        <option value="In progrss">In progrss</option>
+        <option value="Await feedback">Await feedback</option>
+      </select>
+      <button>Add Task</button>
+    </form>
+  </div>
+
+  <div class="priority-button-group">
+    <div class="priority-button priority-button-text txt-nodeco" tabindex="0">
+      <a style="text-decoration: none; color: black;">Urgent</a>
+      <img src="/assed/svg/Prio alta.svg" alt="">
+    </div>
+    <div class="priority-button-medium priority-button-text txt-nodeco" tabindex="0">
+      <a style="text-decoration: none; color: black;">Medium</a>
+      <img src="/assed/svg/Prio media.svg" alt="">
+    </div>
+    <div class="priority-button-low priority-button-text txt-nodeco" tabindex="0">
+      <a style="text-decoration: none; color: black;">Urgent</a>
+      <img src="/assed/svg/Prio baja.svg" alt="">
+    </div>
+  </div>
+
+
+
 </div>
