--- a/assed/template/task_form.html
+++ b/assed/template/task_form.html
@@ -1,38 +1,89 @@
-<div style="padding-left: 244px;">
-  <div class="task">
-    <form onsubmit="addTask()">
-      <input required id="taskTitle" />
-      <textarea type="text" id="taskDescription" placeholder="Enter a Description"></textarea>
-      <input required type="date" name="" id="tastDueDate" placeholder="dd/mm/yyyy" />
-      <select required name="" id="taskContact" multiple>
-        <option value="Georg">Georg</option>
-        <option value="Alex">Alex</option>
-        <option value="Jean">Jean</option>
-      </select>
-      <select required name="" id="taskCategory">
-        <option value="To Do">To Do</option>
-        <option value="In progrss">In progrss</option>
-        <option value="Await feedback">Await feedback</option>
-      </select>
-      <button>Add Task</button>
-    </form>
-  </div>
+<!-- <div style="padding-left: 244px;"> -->
 
-  <div class="priority-button-group">
-    <div class="priority-button priority-button-text txt-nodeco" tabindex="0">
-      <a style="text-decoration: none; color: black;">Urgent</a>
-      <img src="/assed/svg/Prio alta.svg" alt="">
+
+<div class="frame-40">
+  <h2 class="text-t1">Add Task</h2>
+</div>
+
+
+<div class="task">
+  <form onsubmit="addTask()">
+    <div class="frame-219">
+      <div class="input-box">
+        <label for="taskTitle">Title*</label>
+        <input required id="taskTitle" class="form-control border-0" />
+      </div>
+      <div class="input-box">
+        <label for="taskDescription" class="form-label">Description</label>
+        <textarea type="text" class="form-control" style="width: 100%;" rows="3" id="taskDescription"
+          placeholder="Enter a Description"></textarea>
+      </div>
+      <div class="input-box">
+        <label for="exampleDataList" class="form-label">Assigned to</label>
+        <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
+        <datalist id="datalistOptions" required name="" id="taskContact" multiple>
+          <option value="Georg"></option>
+          <option value="Alex"></option>
+          <option value="Jean"></option>S
+        </datalist>
+
+        <!-- Ich habe hier die Liste von Bootsrapverwendet, schau malob das geht   -->
+        <!-- <label for="taskContact">Assigned to</label>
+        <select class="input-box" required name="" id="taskContact" multiple>
+          <option value="Georg">Georg</option>
+          <option value="Alex">Alex</option>
+          <option value="Jean">Jean</option>
+        </select> -->
+
+      </div>
+
     </div>
-    <div class="priority-button-medium priority-button-text txt-nodeco" tabindex="0">
-      <a style="text-decoration: none; color: black;">Medium</a>
-      <img src="/assed/svg/Prio media.svg" alt="">
+    <div class="frame-39">
+      <div class="input-box">
+        <label for="tastDueDate">due Date</label>
+        <input required type="date" class="form-control border-0" name="" id="tastDueDate" placeholder="dd/mm/yyyy" />
+      </div>
+
+      <div class="input-box">
+        <label for="prio-btngroup">Prio</label>
+        <div class="priority-button-group" id="prio-btngroup">
+          <div class="priority-button priority-button-text txt-nodeco" tabindex="0">
+            <a style="text-decoration: none; color: black;">Urgent</a>
+            <img src="/assed/svg/Prio alta.svg" alt="">
+          </div>
+          <div class="priority-button-medium priority-button-text txt-nodeco" tabindex="0">
+            <a style="text-decoration: none; color: black;">Medium</a>
+            <img src="/assed/svg/Prio media.svg" alt="">
+          </div>
+          <div class="priority-button-low priority-button-text txt-nodeco" tabindex="0">
+            <a style="text-decoration: none; color: black;">Urgent</a>
+            <img src="/assed/svg/Prio baja.svg" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="input-box">
+        <label for="taskCategory">Category</label>
+        <select class="input-box" required name="" id="taskCategory">
+          <option value="To Do">To Do</option>
+          <option value="In progrss">In progrss</option>
+          <option value="Await feedback">Await feedback</option>
+        </select>
+      </div>
+
+      <div class="input-box">
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="Add new subtask" aria-label="Recipient's username"
+            aria-describedby="button-addon2">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        </div>
+      </div>
+
     </div>
-    <div class="priority-button-low priority-button-text txt-nodeco" tabindex="0">
-      <a style="text-decoration: none; color: black;">Urgent</a>
-      <img src="/assed/svg/Prio baja.svg" alt="">
+    <div class="frame-29">
+      <button class="button-secondary-wo-icon text-sm-btn">Clear</button>
+      <button class="button-wo-icon text-sm-btn">Add Task</button>
     </div>
-  </div>
 
-
-
+  </form>
 </div>
