--- a/assed/template/task_form.html
+++ b/assed/template/task_form.html
@@ -8,6 +8,7 @@
 
 <div class="task">
   <form onsubmit="addTask()">
+    <!-- leftside -->
     <div class="frame-219">
       <div class="input-box">
         <label for="taskTitle">Title*</label>
@@ -39,6 +40,7 @@
 
     </div>
     <div class="frame-39">
+      <!-- right side -->
       <div class="input-box">
         <label for="tastDueDate">due Date</label>
         <input required type="date" class="form-control border-0" name="" id="tastDueDate" placeholder="dd/mm/yyyy" />
