--- a/assed/template/task_form.html
+++ b/assed/template/task_form.html
@@ -20,21 +20,21 @@
           placeholder="Enter a Description"></textarea>
       </div>
       <div class="input-box">
-        <label for="exampleDataList" class="form-label">Assigned to</label>
+       <!-- <label for="exampleDataList" class="form-label">Assigned to</label>
         <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
         <datalist id="datalistOptions" required name="" id="taskContact" multiple>
           <option value="Georg"></option>
           <option value="Alex"></option>
           <option value="Jean"></option>S
-        </datalist>
+        </datalist>-->
 
         <!-- Ich habe hier die Liste von Bootsrapverwendet, schau malob das geht   -->
-        <!-- <label for="taskContact">Assigned to</label>
+         <label for="taskContact">Assigned to</label>
         <select class="input-box" required name="" id="taskContact" multiple>
           <option value="Georg">Georg</option>
           <option value="Alex">Alex</option>
           <option value="Jean">Jean</option>
-        </select> -->
+        </select> 
 
       </div>
 
