--- a/css/contactsDefault.css
+++ b/css/contactsDefault.css
@@ -6,7 +6,6 @@
     height: 928px;
     top: 96px;
     left: 232px;
-    background-color: green;
     overflow:scroll;
     display: flex;
     flex-direction: column;
@@ -19,7 +18,6 @@
     width: 24px;
     height: 928px;
     left: 432px;
-    background-color: red;
 }
 
 .vector-13 {
@@ -90,7 +88,6 @@
     display: flex;
     align-items: center;
     padding-left: 36px;
-    background-color: red;
 }
 
 .vector-10 {
@@ -106,7 +103,12 @@
     padding-left: 24px;
     display: flex;
     align-items: center;
-    background-color: aquamarine;
+}
+
+.contact-name:hover {
+    background-color: #091931;
+    color: white;
+    cursor: pointer;
 }
 
 .contact-name-circle {
@@ -119,7 +121,6 @@
     height: 48px;
     gap: 5px;
     margin-left: 35px;
-    background-color: grey;
 }
 
 .contact-name-txt {
@@ -128,7 +129,6 @@
     font-size: 20px;
     line-height: 24px;
     height: 24px;
-    background-color: white;
 }
 
 .contact-email {
@@ -138,4 +138,35 @@
     line-height: 19.2px;
     height: 19px;
     color: #007CEE;
+}
+
+.contacts-header-frame40 {
+    position: absolute;
+    width: 569px;
+    height: 73px;
+    top:206px;
+    left: 743px;
+    gap: 30px;
+    display: flex;
+    align-items: center;
+}
+
+.contacts-header-txt-bold {
+    width: 274px;
+    height: 73px;
+    font-family: inter;
+    font-weight: 700;
+    font-size: 61px;
+    line-height: 73.2px;
+    color: #000000;
+}
+
+.contacts-header-txt-small {
+    width: 235px;
+    height: 32px;
+    font-family: inter;
+    font-weight: 400;
+    font-size: 27px;
+    line-height: 32.4px;
+    color: #2A3647;
 }
