contact - view-contact ready whith hover animations

--- a/css/contactsDefault.css
+++ b/css/contactsDefault.css
@@ -103,6 +103,8 @@
     padding-left: 24px;
     display: flex;
     align-items: center;
+    border-radius: 10px;
+    transition: background-color 0.2s;
 }
 
 .contact-name:hover {
@@ -262,6 +264,15 @@
     cursor: pointer;
 }
 
+.edit-name-sub:hover .edit-pen-img {
+    transform: scale(1.2); 
+    transition: transform 0.3s; 
+}
+
+.edit-name-sub:hover .edit-txt {
+    text-decoration: underline;
+}
+
 .edit-pen-img {
     height: 24px;
     width: 24px;
@@ -274,6 +285,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 19.2px;
+    transition:  text-decoration 0.3s;
 }
 
 .delete-container {
@@ -282,7 +294,20 @@
     height: 24px;
     left: 78px;
     gap: 8px;
-    background-color: yellowgreen;
+}
+
+.delete-container:hover {
+    cursor: pointer;
+}
+
+.delete-container:hover .delete-img {
+    transform: scale(1.2); 
+    transition: transform 0.3s; 
+}
+
+.delete-container:hover .delete-txt {
+    text-decoration: underline;
+    transition:  text-decoration 0.3s;
 }
 
 .delete-img {
@@ -316,7 +341,9 @@
 .information-mail-phone-div {
     width: 140px;
     height: 128px;
-    background-color: green;
+    gap: 22px;
+    display: flex;
+    flex-direction: column;
 }
 
 .mail-div {
@@ -325,7 +352,6 @@
     gap: 15px;
     display: flex;
     flex-direction: column;
-    background-color: orange;
 }
 
 .email-txt {
@@ -344,7 +370,41 @@
     color: #007CEE;
 }
 
+.actual-email:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    text-decoration-color: #007CEE;
+}
 
+.phone-div {
+    width: 124px;
+    height: 53px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.phone-txt {
+    font-family: inter;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19.2px;
+    color: #000000;
+}
+
+.actual-phone-number {
+    font-family: inter;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19.2px;
+    color: #000000;
+}
+
+.actual-phone-number:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    text-decoration-color: #000000;
+}
 
 
 
