added yhe Board Hed and find input

--- a/assed/template/draggablecards.html
+++ b/assed/template/draggablecards.html
@@ -1,4 +1,18 @@
 <div style="padding-left: 244px;">
+    <div class="frame-191">
+        <div class="frame-192">
+            <h1>Board</h1>
+            <div class="frame-123">
+                <input type="search" name="Find Task" id="findtaskinput" placeholder="Find Task">
+                <button class="button-secondary-wo-icon">Add Task</button>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
     <div class="container mt-4">
         <div class="kanban-board">
             <div class="kanban-column" id="todo-column" ondrop="drop(event, 'todo-column')"
@@ -23,6 +37,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
