--- a/assed/template/draggablecards.html
+++ b/assed/template/draggablecards.html
@@ -1,46 +1,71 @@
-<div style="padding-left: 244px;">
-    <div class="frame-191">
-        <div class="frame-192">
-            <h1>Board</h1>
-            <div class="frame-123">
-                <input type="search" name="Find Task" id="findtaskinput" placeholder="Find Task">
-                <button class="button-secondary-wo-icon">Add Task</button>
+<div class="board-area">
+    <div class="mt-4">
+        <div class="frame-191">
+            <div class="frame-192">
+                <h1 class="frame-40">Board</h1>
+                <div class="frame-123">
+                    <div class="search-task-web">
+                        <input type="search" class="search-input" name="Find Task" id="findtaskinput"
+                            placeholder="Search Task">
+                        <span class="search-icon">
+                            <img src="/assed/svg/search.svg" alt="">
+                        </span>
+
+                    </div>
+                    <button class="add-new-task-btn">
+                        <p class="add-new-task-text-div">Add Task</p>
+                        <img src="/assed/svg/add.svg" alt="">
+                    </button>
+                </div>
             </div>
         </div>
-    </div>
 
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75"
+                aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
 
-
-
-
-    <div class="container mt-4">
         <div class="kanban-board">
             <div class="kanban-column" id="todo-column" ondrop="drop(event, 'todo-column')"
                 ondragover="allowDrop(event)">
-                <h2>To Do</h2>
-                <div class="kanban-card" draggable="true" ondragstart="drag(event)">Task 1</div>
+                <div class="frame-136 column-title-text ">
+                    <p>To Do</p>
+                    <div class="plus-button"><img src="/assed/svg/capa-1.svg" alt="" onclick="alert('opentask')"></div>
+                </div>
+                <div class="kanban-card" draggable="true" ondragstart="drag(event)">
+                    <p class="labels-board-card-label">User Story</p>
+                    <div class="frame-114">discriptionfromtask</div>
+                    <div class="progress progress-bar-custom ">
+                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75"
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="frame-139">badges</div>
+                </div>
                 <div class="kanban-card" draggable="true" ondragstart="drag(event)">Task 2</div>
             </div>
             <div class="kanban-column" id="inprogress-column" ondrop="drop(event, 'inprogress-column')"
                 ondragover="allowDrop(event)">
-                <h2>In Progress</h2>
+                <div class="frame-136 column-title-text ">
+                    <p>In Progress</p>
+                    <div class="plus-button"><img src="/assed/svg/capa-1.svg" alt=""></div>
+                </div>
             </div>
             <div class="kanban-column" id="feedback-column" ondrop="drop(event, 'feedback-column')"
                 ondragover="allowDrop(event)">
-                <h2>Awaiting Feedback</h2>
+                <div class="frame-136 column-title-text ">
+                    <p>Awaiting Feedback</p>
+                    <div class="plus-button"><img src="/assed/svg/capa-1.svg" alt=""></div>
+                </div>
             </div>
             <div class="kanban-column" id="done-column" ondrop="drop(event, 'done-column')"
                 ondragover="allowDrop(event)">
-                <h2>Done</h2>
+                <div class="frame-136 column-title-text ">
+                    <p>Done</p>
+
+                </div>
                 <div class="kanban-card" draggable="true" ondragstart="drag(event)">Task 5</div>
                 <div class="kanban-card" draggable="true" ondragstart="drag(event)">Task 6</div>
             </div>
         </div>
     </div>
-
-
-
-
-
-
 </div>
