--- a/assed/template/html-template.html
+++ b/assed/template/html-template.html
@@ -48,10 +48,14 @@
 </head>
 
 <body>
-
+    <div w3-include-html="assed/template/header.html"></div>
+    <div w3-include-html="assed/template/sidebar.html"></div>
+    <!-- Input Task Fields -->
+    <div w3-include-html="assed/template/task_form.html"></div>
 
     <script>
         includeHTML();
+        
     </script>
 </body>
 
