--- a/css/board.css
+++ b/css/board.css
@@ -1,18 +1,35 @@
-.frame-191 {
+.board-area {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    width: 100vw;
+    padding-top: 8px;
+    padding-left: 234px;
+    padding-right: 8px;
+}
 
+
+.frame-191 {
+    display: flex;
     height: 232px;
     overflow: hidden;
     background: #F6F7F8;
     flex-shrink: 0;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 .frame-192 {
-    width: 100%;    
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 79.5px 64px;
-
 }
 
 .frame-123 {
@@ -22,5 +39,126 @@
     gap: 32px;
     width: 504px;
     height: 48px;
+}
 
+.frame-40 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1px;
+    color: #000;
+    font-family: Inter;
+    font-size: 61px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+}
+
+.search-task-web {
+    display: flex;
+    width: 312px;
+    padding: 8px 16px;
+    align-items: center;
+    gap: 10px;
+    border-radius: 10px;
+    border: 1px solid var(--icon, #A8A8A8);
+    background: #FFF;
+    height: 48px;
+}
+
+.column-title {
+    display: flex;
+    width: 1208px;
+    padding: 0px 64px;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.frame-136 {
+    display: flex;
+    width: 244px;
+    justify-content: space-between;
+    align-items: center;
+    flex-shrink: 0;
+}
+
+.column-title-text {
+    color: var(--menu-color, #42526E);
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+}
+
+.plus-button {
+    display: flex;
+    width: 24px;
+    height: 24px;
+    padding: 3px;
+    border-radius: 8px;
+    border: 2px solid var(--version-2-main-color, #2A3647);
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+}
+
+
+.search-container {
+    display: flex;
+    align-items: center;
+    width: 300px;
+    /* Anpassen der Breite nach Bedarf */
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.search-input {
+    flex: 1;
+    border: none;
+    padding: 10px;
+    outline: none;
+    font-size: 16px;
+}
+
+.search-icon {
+
+    padding: 0 16px;
+    display: flex;
+    align-items: center;
+    border-left: 1px solid #ccc;
+    cursor: pointer;
+}
+
+
+.add-new-task-btn {
+
+    border-radius: 10px;
+    border: 1px;
+    padding-left: 12px;
+    padding-right: 12px;
+    gap: 16px;
+    background-color: #2A3647;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 48px;
+}
+
+.add-new-task-btn:hover {
+    background-color: #091931;
+    cursor: pointer;
+}
+
+.add-new-task-text-div {
+    width: 92px;
+    height: 25px;
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 25.2px;
+    color: #ffffff;
+    margin: 0;
 }
