new bootstrap + addtask.js functional now

--- a/assed/template/task_form.html
+++ b/assed/template/task_form.html
@@ -49,10 +49,10 @@
       <div class="input-box">
         <label for="prio-btngroup">Prio</label>
         <div class="priority-button-group" id="prio-btngroup">
-          <div class="priority-button priority-button-text txt-nodeco" tabindex="0">
+          <button type="checkbox" class="priority-button priority-button-text txt-nodeco" tabindex="0">
             <a style="text-decoration: none; color: black;">Urgent</a>
             <img src="/assed/svg/Prio alta.svg" alt="">
-          </div>
+          </button>
           <div class="priority-button-medium priority-button-text txt-nodeco" tabindex="0">
             <a style="text-decoration: none; color: black;">Medium</a>
             <img src="/assed/svg/Prio media.svg" alt="">
