--- a/css/addContact.css
+++ b/css/addContact.css
@@ -134,12 +134,84 @@ body {
 
 /* Add contacts textfield */
 .add-contact-textfileds {
+    position: absolute;
     width: 422px;
     height: 215px;
     top: 137px;
     left: 742px;
     gap: 32px;
     background-color: greenyellow;
+}
+
+.inputfield-1-around {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 422px;
+    height: 50px;
+    gap:8px;
+    border-radius: 10px;
+    border: 1px solid #D1D1D1;
+}
+
+.inputfield-1 {
+    position: absolute;
+    width: 380px;
+    height: 24px;
+    /*width: 422px;
+    height: 50px;
+    border-radius: 10px;
+    border: 1px solid #D1D1D1;*/
+    font-family: inter;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    border: none;
+    outline: none;
+}
+
+::placeholder {
+    color: #D1D1D1;
+}
+
+.txt-img-div {
+    position: absolute;
+    width: 380px;
+    height: 24px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.txt-div {
+    width: 56px;
+    height: 24px;
+    font-family: inter;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color: #D1D1D1;
+}
+
+.inputfield-img-div {
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    left: 360px;
+    margin-left: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
+
+
+.inputfield-img {
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    /* top: 4px; 
+    left: 360px;
+    margin-left: 21px;*/
 }
 
 
