--- a/css/addContact.css
+++ b/css/addContact.css
@@ -135,12 +135,13 @@ body {
 /* Add contacts textfield */
 .add-contact-textfileds {
     position: absolute;
+    display: flex;
+    flex-direction: column;
     width: 422px;
     height: 215px;
     top: 137px;
     left: 742px;
     gap: 32px;
-    background-color: greenyellow;
 }
 
 .inputfield-1-around {
@@ -212,6 +213,66 @@ body {
     /* top: 4px; 
     left: 360px;
     margin-left: 21px;*/
+}
+
+.inputfield-mail-img {
+    position: absolute;
+    width: 20px;
+    height: 16px;
+}
+
+.inputfield-phone-img {
+    position: absolute;
+    width: 18px;
+    height: 18px;
+}
+
+
+/* Contact-Sidebar*/
+.contact-sidebar {
+    width: 467px;
+    height: 594px;
+    padding-top: 66px;
+    padding-left: 48px;
+    padding-bottom: 66px;
+    padding-right: 48px;
+    gap: 12px;
+    border-radius: 10px 0 0 10px;
+    background-color: #2A3647;
+}
+
+.contact-sidebar-txt-div {
+    position: absolute;
+    top: 250px;
+    width: 371px;
+    height: 129px;
+    gap: 16px;
+}
+
+.contact-sidebar-txt-1 {
+    width: 366px;
+    height: 73px;
+    font-family: inter;
+    font-weight: 700;
+    font-size: 61px;
+    line-height: 73.2px;
+    color: #FFFFFF;
+}
+
+.contact-sidebar-txt-2 {
+    width: 371px;
+    height: 32px;
+    font-family: inter;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 32.4px;
+    color: #FFFFFF;
+}
+
+.contact-sidebar-graphic-img {
+    height: 90px;
+    border: 3px;
+    rotation: -90;
 }
 
 
